--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -5,40 +5,141 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Memory_Game"
         mc:Ignorable="d"
-        Title="MainWindow"
-        Background="#00FFE1"
         WindowStyle="None"
-        WindowState="Maximized">
-    <Grid>
-        <Button 
-            Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" MaxHeight="50px" MaxWidth="80px" FontSize="24px"
-            x:Name="Menu"
-            Click="ButtonClickMenu"
-            Content="Menu"
-            Background="White" RenderTransformOrigin="0.98,0.575" Margin="953.828,-400,-250,549.665"
-         />
-        <Button 
-            Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" MaxHeight="50px" MaxWidth="80px" FontSize="24px"
-            x:Name="Reset"
-            Click="ButtonClickReset"
-            Content="Reset"
-            Background="White" RenderTransformOrigin="0.98,0.575" Margin="833.072,-400,-150,549.665"
-         />
-        <Button 
-            Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" MaxHeight="50px" MaxWidth="80px" FontSize="24px"
-            x:Name="Save"
-            Click="ButtonClickSave"
-            Content="Save"
-            Background="White" RenderTransformOrigin="0.98,0.575" Margin="701.613,-400,-50,549.665"
-         />
-        <Button 
-            Style="{StaticResource RoundButtonTemplate}" BorderBrush="#fff" MaxHeight="50px" MaxWidth="80px" FontSize="24px"
-            x:Name="Load"
-            Click="ButtonClickLoad"
-            Content="Load"
-            Background="White" RenderTransformOrigin="0.98,0.575" Margin="560.269,-400,50,549.665"
-         />
-        <Grid x:Name="GameGrid" Margin="0,128.428,0,0"/>
-    </Grid>
+        WindowState="Maximized"
+        Title="MainWindow" Height="450" Width="800"
+           MinHeight="400" MinWidth="650">
+    <Grid Background="	#00FFE1" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="169*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="44*"/>
+        </Grid.RowDefinitions>
 
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="294*"/>
+            <ColumnDefinition Width="52*"/>
+            <ColumnDefinition Width="102*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="293*"/>
+        </Grid.ColumnDefinitions>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="#fff"
+            Name="Exit"
+            Content="Quit"
+            Click="Exit_Click"
+            MaxHeight="40px"
+
+            Background="White" Margin="0.4,0.4,0,1" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="6"
+            >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="#fff"
+            x:Name="Highscore"
+            Content="Highscores"
+            Click="Highscore_Click"
+                  MaxHeight="40px"
+            Background="White" Margin="0.4,0.8,0,0.6" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="5"
+            >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="#fff"
+            x:Name="Rules"
+            Content="Rules"
+                  MaxHeight="40px"
+            Background="White" Margin="0.4,0.2,0,0.2" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="4"
+            >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="#fff"
+            x:Name="LoadGame"
+            Content="Load Game"
+                  MaxHeight="40px"
+            Background="White" Margin="0.4,0.6,0,0.8" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="3"
+            >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="#fff"
+            x:Name="newGame"
+            Content="New Game"
+            Click="NewGame_Click"
+                  MaxHeight="40px"
+            Background="White" Margin="0.4,0,0,0.4" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="2"
+            >
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+        <Button 
+            Style="{StaticResource RoundButtonTemplate}"
+            BorderBrush="Black"
+            x:Name="Hoofdmenu"
+            Content="Hoofdmenu"
+            FontSize="24"
+            BorderThickness="65"
+                  MaxHeight="60px"
+            Background="white" Margin="0.4,64,3.8,18.6" RenderTransformOrigin="0.5,0.5" Grid.Column="2" Grid.ColumnSpan="3"
+            >
+
+
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+
+    </Grid>
 </Window>
