'Hoofdmenu' verandert naar 'Main Menu' zodat het Engels is

--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -124,7 +124,7 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="Black"
             x:Name="Hoofdmenu"
-            Content="Hoofdmenu"
+            Content="Main Menu"
             FontSize="24"
             BorderThickness="65"
                   MaxHeight="60px"
