--- a/Memory Game/Memory Game/NewGame.xaml
+++ b/Memory Game/Memory Game/NewGame.xaml
@@ -8,28 +8,144 @@
         WindowStyle="None"
         WindowState="Maximized"
         Title="NewGame" Height="450" Width="800">
-    <Grid Background="	#00FFE1">
+  <Border Padding="10" Background="#00FFE1">
+    <StackPanel Background="#00FFE1">
+
+      <!--New game text-->
+      <Border
+          BorderThickness="1"
+          BorderBrush="Black"
+          CornerRadius="10"
+          Background="White"
+          Margin="5"
+          Padding="5"
+          Width="260"
+                
+                >
+        <TextBlock
+            Text="New Game"
+            FontSize="50"
+            FontFamily="Comic Sans MS"
+                    />
+      </Border>
+      <!--Choose mode text-->
+      <TextBlock
+          Text="Choose mode"
+          HorizontalAlignment="Center"
+          FontWeight="Bold"
+                />
+
+      <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="52*"/>
-            <ColumnDefinition Width="111*"/>
-            <ColumnDefinition Width="129*"/>
-            <ColumnDefinition Width="214*"/>
-            <ColumnDefinition Width="288*"/>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="295*"/>
-            <RowDefinition Height="53*"/>
-            <RowDefinition Height="59*"/>
-            <RowDefinition Height="36*"/>
-        </Grid.RowDefinitions>
+
+        <!--Single player button-->
         <Button
-            Style="{StaticResource RoundButtonTemplate}"
-            Content="Back" Margin="13,5,9.2,0.2" Click="Button_Click" Grid.Row="2" Grid.Column="1"
-            />
+            Name="SpBtn"
+            Grid.Column="0"
+            Margin="200 0 0 0"
+            Content="Single Player"
+            Width="100" Height="50"
+            Background="White"
+                    />
+        <!--Multiplayer Button-->
         <Button
-            Style="{StaticResource RoundButtonTemplate}"
-            Content="Play" Margin="26,5,38.6,0.2" Click="Play_Click" Grid.Row="2" Grid.Column="3"
-            />
-        <TextBlock HorizontalAlignment="Left" Height="56" FontSize="40px" Margin="10,85,0,0" TextWrapping="Wrap" Text="New Game" TextAlignment="Center" VerticalAlignment="Top" Width="206" Grid.Column="3" Grid.ColumnSpan="2"/>
-    </Grid>
+            Name="MpBtn"
+            Grid.Column="1"
+            Margin="0 0 175 0"
+            Content="Multiplayer"
+            Width="100" Height="50"
+            Background="White"
+                    />
+      </Grid>
+
+      <!--Player 1 text-->
+      <TextBlock
+          Text="Player 1: "
+          FontWeight="Bold"
+          Margin="0 10"
+          FontFamily="Comic Sans MS"
+          HorizontalAlignment="Center"
+             />
+
+      <!--Player 1 name input box-->
+      <TextBox
+          Padding="2"
+          Margin="0 5 0 0"
+          HorizontalAlignment="Center"
+          Width="200"
+          Name="Player1Input"
+             />
+      <!--Player 2 text-->
+      <TextBlock
+          Text="Player 2: "
+          FontWeight="Bold"
+          Margin="0 10"
+          FontFamily="Comic Sans MS"
+          HorizontalAlignment="Center"
+                />
+
+      <!--Player 2 name input box-->
+      <TextBox
+          Padding="2"
+          Margin="0 0 0 10"
+          HorizontalAlignment="Center"
+          Width="200"
+          Name="Player2Input"
+                
+             />
+      <!--Number of cards-->
+      <TextBlock
+          Text="Number of Cards"
+          HorizontalAlignment="Center"
+          FontWeight="Bold"
+                />
+
+      <!--Number of cards dropdown-->
+      <ComboBox Width="50" Margin="0 10 0 0" Padding="2" SelectedIndex="0">
+        <ComboBoxItem>16</ComboBoxItem>
+        <ComboBoxItem>18</ComboBoxItem>
+        <ComboBoxItem>20</ComboBoxItem>
+        <ComboBoxItem>22</ComboBoxItem>
+      </ComboBox>
+
+
+
+      <Grid>
+
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="2*" />
+          <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+
+        <!--Return Button-->
+        <Button
+            Grid.Column="0"
+            Margin="0 0 0 0"
+            Content="Return"
+            Name="BackBtn"
+            HorizontalAlignment="Center"
+            Width="100"
+                />
+
+        <!--Next Button-->
+        <Button
+            Grid.Column="1"
+            Margin="0 0 0 0"
+            Content="Next"
+            x:Name="ProceedBtn"
+            HorizontalAlignment="Center"
+            Width="100"
+            Click="ProceedBtn_Click"
+                />
+
+
+
+
+      </Grid>
+
+    </StackPanel>
+  </Border>
 </Window>
