--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -10,7 +10,7 @@
         Title="Difficulty" Height="450" Width="800">
 
     <Viewbox>
-        <Grid Background="#00FFE1" ShowGridLines="False" Width="1273" Height="689">
+        <Grid Background="#00FFE1" ShowGridLines="False" Width="auto" Height="auto">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="267*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -32,10 +32,7 @@
             <CheckBox Content="Easy" FontSize="30" Margin="151,33,166,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1"/>
 
 
-            <Label Content="Medium" FontSize="20" Margin="169,192,170,229" Grid.RowSpan="1" RenderTransformOrigin="2.654,0.824" Grid.Column="1"/>
-
-
-
+          
             <Button x:Name="button1" Content="Start Game" Foreground="White" FontSize="30" Background="Black" Click="Button_Click1" Margin="131,174,131,10" Grid.Row="2" Grid.Column="2" />
             <Button x:Name="Closebutton" Background="White" Content="Return" Click="Closebutton_Click" Margin="278,183,50,17" Grid.Row="2" />
 
