--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Memory_Game"
-        mc:Ignorable="d"
+        mc:Ignorable="d"    Title="MainWindow"
         WindowStyle="None"
         WindowState="Maximized"
-        Title="MainWindow" Height="450" Width="800"
+     Height="450" Width="800"
            MinHeight="400" MinWidth="650">
     <Grid Background="	#00FFE1" >
         <Grid.RowDefinitions>
@@ -57,7 +57,7 @@
             Content="Highscores"
             Click="Highscore_Click"
                   MaxHeight="40px"
-            Background="White" Margin="0.4,0.8,0,0.6" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="5"
+            Background="White" Margin="0.4,0.8,0,0" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="5" Height="34.6" VerticalAlignment="Top"
             >
             <Button.RenderTransform>
                 <TransformGroup>
