--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -7,10 +7,11 @@
         mc:Ignorable="d"
         WindowStyle="None"
         WindowState="Maximized"
-        Title="Difficulty" Height="450" Width="800">
+        Title="Difficulty" Background="#00FFE1" >
+        
 
     <Viewbox>
-        <Grid Background="#00FFE1" ShowGridLines="False" Width="auto" Height="auto">
+        <Grid ShowGridLines="False">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="267*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -27,9 +28,9 @@
             </StackPanel>
 
 
-            <CheckBox x:Name="Checkbox_Hard" Content="Medium" FontSize="30" Margin="140,33,131,144" RenderTransformOrigin="2.654,0.824" Grid.Column="2" Checked="CheckBox_Checked_Hard" Grid.Row="1"/>
-            <CheckBox x:Name="Checkbox_Medium" Content="Hard" FontSize="30" Margin="139,33,144,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Medium" Grid.Row="1"/>
-            <CheckBox x:Name="Checkbox_Easy" Content="Easy" FontSize="30" Margin="151,33,166,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1" Checked="CheckBox_Checked_Easy"/>
+            <CheckBox x:Name="Checkbox_Hard" Content="Medium" FontSize="30" Margin="140,33,131,144" RenderTransformOrigin="2.654,0.824" Grid.Column="2" Checked="CheckBox_Checked_Hard" Unchecked="Checkbox_Unchecked_Hard" Grid.Row="1"/>
+            <CheckBox x:Name="Checkbox_Medium" Content="Hard" FontSize="30" Margin="139,33,144,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Medium" Unchecked="Checkbox_Unchecked_Medium"  Grid.Row="1"/>
+            <CheckBox x:Name="Checkbox_Easy" Content="Easy" FontSize="30" Margin="151,33,166,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1" Checked="CheckBox_Checked_Easy" Unchecked="Checkbox_Unchecked_Easy"/>
 
 
           
@@ -40,7 +41,7 @@
             <Label FontSize="40" Content="Choose Difficulty!" Grid.Column="2" Margin="51,158,51,11"/>
 
 
-            <Image Source="/img/2.jpg" Grid.Column="3" Margin="50,114,50,137" Grid.Row="1" Grid.RowSpan="2">
+            <Image Source="/img/2.png" Width="175" Height="175" Stretch="Fill" Grid.Column="3" Margin="50,114,50,137" Grid.Row="1" Grid.RowSpan="2">
                 <Image.Effect>
                     <DropShadowEffect>
 
@@ -56,7 +57,7 @@
                 </Image.Effect>
             </Image>
 
-            <Image Source="/img/3.jpg" Grid.Column="2" Margin="49,115,50,137" Grid.Row="1" Grid.RowSpan="2">
+            <Image Source="/img/3.png" Width="175" Height="175" Stretch="Fill"  Grid.Column="2" Margin="49,115,50,137" Grid.Row="1" Grid.RowSpan="2">
                 <Image.Effect>
                     <DropShadowEffect>
 
