--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -89,6 +89,7 @@
             Style="{StaticResource RoundButtonTemplate}"
             BorderBrush="#fff"
             x:Name="LoadGame"
+            Click="LoadClick"
             Content="Load Game"
                   MaxHeight="40px"
             Background="White" Margin="0.4,0.6,0,0.8" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="3"
