--- a/Memory Game/Memory Game/Highscores.xaml
+++ b/Memory Game/Memory Game/Highscores.xaml
@@ -12,12 +12,14 @@
     <Grid Background="	#00FFE1">
         <Grid.RowDefinitions>
             <RowDefinition Height="172*"/>
-            <RowDefinition Height="271*"/>
+            <RowDefinition Height="207*"/>
+            <RowDefinition Height="64*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="142*"/>
-            <ColumnDefinition Width="111*"/>
-            <ColumnDefinition Width="144*"/>
+            <ColumnDefinition Width="125*"/>
+            <ColumnDefinition Width="159*"/>
+            <ColumnDefinition Width="222*"/>
+            <ColumnDefinition Width="288*"/>
         </Grid.ColumnDefinitions>
         <Button 
             Style="{StaticResource RoundButtonTemplate}"
@@ -27,7 +29,7 @@
             FontSize="24"
             BorderThickness="65"
             MaxHeight="60px"
-            Background="white" Margin="0,64,0,5.1" RenderTransformOrigin="0.5,0.5" Grid.Column="1"
+            Background="white" Margin="0,64,0,5.1" RenderTransformOrigin="0.5,0.5" Grid.Column="2"
             >
 
 
@@ -41,7 +43,7 @@
         </Button>
 
 
-        <ListBox HorizontalAlignment="Center" Margin="10,10,10,0" Name="listBox1"  VerticalAlignment="Top" Width="201.6" Height="200" Grid.Column="1" Grid.Row="1">
+        <ListBox HorizontalAlignment="Center" Margin="10,10,10,0" Name="listBox1"  VerticalAlignment="Top" Width="201.6" Height="200" Grid.Column="2" Grid.Row="1" Grid.RowSpan="2">
             <ListBoxItem Content="Coffie"></ListBoxItem>
             <ListBoxItem Content="Tea"></ListBoxItem>
             <ListBoxItem Content="Orange Juice"></ListBoxItem>
@@ -50,6 +52,10 @@
             <ListBoxItem Content="Mango Shake"></ListBoxItem>
             <ListBoxItem Content="Tea with milk and sugar"></ListBoxItem>
         </ListBox>
+        <Button
+            Style="{StaticResource RoundButtonTemplate}"
+            Content="Back" Margin="17.8,10,10,10" Click="Button_Click" Grid.Row="2" RenderTransformOrigin="0.36,0.514"
+            />
 
 
     </Grid>
