--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -7,8 +7,7 @@
         mc:Ignorable="d"
         WindowStyle="None"
         WindowState="Maximized"
-        Title="MainWindow" Height="450" Width="800"
-           MinHeight="400" MinWidth="650">
+        Title="MainWindow" Height="450" Width="800">
     <Grid Background="	#00FFE1" >
         <Grid.RowDefinitions>
             <RowDefinition Height="169*"/>
