--- a/Memory Game/Memory Game/DifficultyWindow.xaml
+++ b/Memory Game/Memory Game/DifficultyWindow.xaml
@@ -28,8 +28,8 @@
             </StackPanel>
 
 
-            <CheckBox x:Name="Checkbox_Hard" Content="Medium" FontSize="30" Margin="140,33,131,144" RenderTransformOrigin="2.654,0.824" Grid.Column="2" Checked="CheckBox_Checked_Hard" Unchecked="Checkbox_Unchecked_Hard" Grid.Row="1"/>
-            <CheckBox x:Name="Checkbox_Medium" Content="Hard" FontSize="30" Margin="139,33,144,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Medium" Unchecked="Checkbox_Unchecked_Medium"  Grid.Row="1"/>
+            <CheckBox x:Name="Checkbox_Medium" Content="Medium" FontSize="30" Margin="140,33,131,144" RenderTransformOrigin="2.654,0.824" Grid.Column="2" Checked="CheckBox_Checked_Medium" Unchecked="Checkbox_Unchecked_Medium" Grid.Row="1"/>
+            <CheckBox x:Name="Checkbox_Hard" Content="Hard" FontSize="30" Margin="139,33,144,144" RenderTransformOrigin="2.654,0.824" Grid.Column="3" Checked="CheckBox_Checked_Hard" Unchecked="Checkbox_Unchecked_Hard"  Grid.Row="1"/>
             <CheckBox x:Name="Checkbox_Easy" Content="Easy" FontSize="30" Margin="151,33,166,144" RenderTransformOrigin="2.654,0.824" Grid.Row="1" Checked="CheckBox_Checked_Easy" Unchecked="Checkbox_Unchecked_Easy"/>
 
 
