--- a/Memory Game/Memory Game/NewGame.xaml
+++ b/Memory Game/Memory Game/NewGame.xaml
@@ -5,14 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Memory_Game"
         mc:Ignorable="d"
+        Title="NewGame"
+        Width="1920"
+        Height="1080"
         WindowStyle="None"
         WindowState="Maximized"
-        Title="NewGame">
-    <Border Background="#00FFE1">
-        <StackPanel Background="#00FFE1">
+        Background="#00FFE1">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30*"></RowDefinition>
+            <RowDefinition Height="100*"></RowDefinition>
+            <RowDefinition Height="100*"></RowDefinition>
+            <RowDefinition Height="150*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="30*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="80*"></RowDefinition>
+            <RowDefinition Height="250*"></RowDefinition>
+            <RowDefinition Height="50*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-            <!--New game text-->
-            <Border
+        <!--New game text-->
+        <Border
           BorderThickness="1"
           BorderBrush="Black"
           CornerRadius="10"
@@ -20,140 +43,155 @@
           Margin="5"
           Padding="5"
           Width="260"
-                
+          Grid.Row="1"
+            Grid.Column="2"
+            Grid.ColumnSpan="2"
                 >
-                <TextBlock
+            <TextBlock
             Text="New Game"
             FontSize="50"
-            FontFamily="Comic Sans MS"
+
                     />
-            </Border>
-            <!--Choose mode text-->
-            <TextBlock
+        </Border>
+
+        <!--Choose mode text-->
+        <TextBlock
           Text="Choose mode"
           HorizontalAlignment="Center"
+            VerticalAlignment="Top"
           FontWeight="Bold"
+            Grid.Column="2"
+            Grid.Row="3"
+            FontSize="36"
+            Grid.ColumnSpan="2"
                 />
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-
-                <!--Single player button-->
-                <Button
+        <Button
             Name="SpBtn"
-            Grid.Column="0"
-            Margin="200 0 0 0"
+            Grid.Column="2"
+            Grid.Row="3"
             Content="Single Player"
-            Width="100" Height="50"
+            Width="125" Height="75"
             Background="White"
             Click="SpBtn_Click"
+            VerticalAlignment="Bottom"
+            FontSize="18"
                     />
-                <!--Multiplayer Button-->
-                <Button
+        <!--Multiplayer Button-->
+        <Button
             Name="MpBtn"
-            Grid.Column="1"
-            Margin="0 0 175 0"
+            Grid.Column="3"
+            Grid.Row="3"
             Content="Multiplayer"
-            Width="100" Height="50"
+            Width="125" Height="75"
             Background="White"
             Click="MpBtn_Click"
+            VerticalAlignment="Bottom"
+            FontSize="18"
                     />
-            </Grid>
 
-            <!--Player 1 text-->
-            <TextBlock
+        <!--Player 1 text-->
+        <TextBlock
           Text="Player 1: "
           FontWeight="Bold"
-          Margin="0 10"
-          FontFamily="Comic Sans MS"
           HorizontalAlignment="Center"
+            VerticalAlignment="Top"
           x:Name="P1Text"
+          Grid.Column="2"
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
              />
 
-            <!--Player 1 name input box-->
-            <TextBox
+        <!--Player 1 name input box-->
+        <TextBox
           Padding="2"
-          Margin="0 5 0 0"
           HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            HorizontalContentAlignment="Center"
+          Height="25"
           Width="200"
           x:Name="P1Input"
           MaxLength="20"
+            Grid.Column="2"
+            Grid.Row="5"
+            Grid.ColumnSpan="2"
             />
-            <!--Player 2 text-->
-            <TextBlock
+        <!--Player 2 text-->
+        <TextBlock
           Text="Player 2: "
           FontWeight="Bold"
-          Margin="0 10"
-          FontFamily="Comic Sans MS"
           HorizontalAlignment="Center"
+            VerticalAlignment="Top"
           x:Name="P2Text"
+            Grid.Column="2"
+            Grid.Row="7"
+            Grid.ColumnSpan="2"
                 />
 
-            <!--Player 2 name input box-->
-            <TextBox
+        <!--Player 2 name input box-->
+        <TextBox
           Padding="2"
-          Margin="0 0 0 10"
           HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
+            HorizontalContentAlignment="Center"
+           Height="25"
           Width="200"
           x:Name="P2Input"
           MaxLength="20"
+            Grid.Column="2"
+            Grid.Row="7"
+            Grid.ColumnSpan="2"
                 
              />
-            <!--Number of cards-->
-            <TextBlock
+
+        <TextBlock
           Text="Number of Cards"
           HorizontalAlignment="Center"
+            VerticalAlignment="Center"
           FontWeight="Bold"
+            Grid.Column="2"
+            Grid.Row="8"
+            Grid.ColumnSpan="2"
                 />
 
-            <!--Number of cards dropdown-->
-            <ComboBox Width="50" Margin="0 10 0 0" Padding="2" SelectedIndex="0" x:Name="CardAmount">
-                <ComboBoxItem>16</ComboBoxItem>
-                <ComboBoxItem>18</ComboBoxItem>
-                <ComboBoxItem>20</ComboBoxItem>
-                <ComboBoxItem>22</ComboBoxItem>
-                <ComboBoxItem>24</ComboBoxItem>
-            </ComboBox>
+        <!--Number of cards dropdown-->
+        <ComboBox Width="50" Padding="2" SelectedIndex="0" x:Name="CardAmount"
+            VerticalAlignment="Bottom"
+            Grid.Column="2"
+            Grid.Row="8"
+            Grid.ColumnSpan="2">
+            <ComboBoxItem>16</ComboBoxItem>
+            <ComboBoxItem>18</ComboBoxItem>
+            <ComboBoxItem>20</ComboBoxItem>
+            <ComboBoxItem>22</ComboBoxItem>
+            <ComboBoxItem>24</ComboBoxItem>
+        </ComboBox>
 
-
-
-            <Grid>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="2*" />
-                </Grid.ColumnDefinitions>
-
-                <!--Return Button-->
-                <Button
-            Grid.Column="0"
-            Margin="0 0 0 0"
+        <!--Return Button-->
+        <Button
             Content="Return"
             x:Name="BackBtn"
             HorizontalAlignment="Center"
+            Height="40"
             Width="100"
             Click="BackBtn_Click"
+            Grid.Row="10"
+            Grid.Column="0"
+            
                 />
 
-                <!--Next Button-->
-                <Button
-            Grid.Column="1"
-            Margin="0 0 0 0"
+        <!--Next Button-->
+        <Button
             Content="Next"
             x:Name="ProceedBtn"
             HorizontalAlignment="Center"
+            Height="40"
             Width="100"
             Click="ProceedBtn_Click"
+            Grid.Row="10"
+            Grid.Column="8"
                 />
 
 
-
-
-            </Grid>
-
-        </StackPanel>
-    </Border>
+    </Grid>
 </Window>
