--- a/Memory Game/Memory Game/MainWindow.xaml
+++ b/Memory Game/Memory Game/MainWindow.xaml
@@ -11,7 +11,7 @@
     <Grid Background="	#00FFE1" >
         <Grid.RowDefinitions>
             <RowDefinition Height="169*"/>
-            <RowDefinition Height="34*"/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="34*"/>
             <RowDefinition Height="34*"/>
             <RowDefinition Height="34*"/>
@@ -37,8 +37,8 @@
             Content="Quit"
             Click="Exit_Click"
             MaxHeight="40px"
-            MouseEnter="MouseEnterEvent"
-            MouseLeave="MouseLeaveEvent"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0.4,0,1" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="6"
             >
             <Button.RenderTransform>
@@ -57,8 +57,8 @@
             Content="Highscores"
             Click="Highscore_Click"
             MaxHeight="40px"
-            MouseEnter="MouseEnterEvent"
-            MouseLeave="MouseLeaveEvent"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0.8,0,0.6" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="5"
             >
             <Button.RenderTransform>
@@ -76,8 +76,8 @@
             x:Name="Rules"
             Content="Rules"
                   MaxHeight="40px"
-            MouseEnter="MouseEnterEvent"
-            MouseLeave="MouseLeaveEvent"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0.2,0,0.2" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="4"
             >
             <Button.RenderTransform>
@@ -96,8 +96,8 @@
             Content="Load Game"
             Click="LoadGameClick"
                   MaxHeight="40px"
-            MouseEnter="MouseEnterEvent"
-            MouseLeave="MouseLeaveEvent"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0.6,0,0.8" RenderTransformOrigin="0.5,0.503" Grid.Column="3" Grid.Row="3"
             >
             <Button.RenderTransform>
@@ -116,8 +116,8 @@
             Content="New Game"
             Click="NewGame_Click"
                   MaxHeight="40px"
-            MouseEnter="MouseEnterEvent"
-            MouseLeave="MouseLeaveEvent"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeavevEvent"
             Background="White" Margin="0.4,0,0,0.4" RenderTransformOrigin="0.5,0.5" Grid.Column="3" Grid.Row="2"
             >
             <Button.RenderTransform>
