--- a/Memory Game/Memory Game/NewGame.xaml
+++ b/Memory Game/Memory Game/NewGame.xaml
@@ -21,9 +21,9 @@
             <RowDefinition Height="50*"></RowDefinition>
             <RowDefinition Height="30*"></RowDefinition>
             <RowDefinition Height="50*"></RowDefinition>
-            <RowDefinition Height="80*"></RowDefinition>
-            <RowDefinition Height="250*"></RowDefinition>
-            <RowDefinition Height="50*"></RowDefinition>
+            <RowDefinition Height="100*"></RowDefinition>
+            <RowDefinition Height="180*"></RowDefinition>
+            <RowDefinition Height="100*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -70,7 +70,7 @@
             Name="SpBtn"
             Grid.Column="2"
             Grid.Row="3"
-            Content="Single Player"
+            Content="Singleplayer"
             Width="125" Height="75"
             Background="White"
             Click="SpBtn_Click"
@@ -149,14 +149,17 @@
           HorizontalAlignment="Center"
             VerticalAlignment="Center"
           FontWeight="Bold"
+            FontSize="18"
             Grid.Column="2"
             Grid.Row="8"
             Grid.ColumnSpan="2"
+            Margin="0 0 0 20"
                 />
 
         <!--Number of cards dropdown-->
-        <ComboBox Width="50" Padding="2" SelectedIndex="0" x:Name="CardAmount"
+        <ComboBox Width="125" Height="30" Padding="2" SelectedIndex="0" x:Name="CardAmount"
             VerticalAlignment="Bottom"
+                  VerticalContentAlignment="Center"
             Grid.Column="2"
             Grid.Row="8"
             Grid.ColumnSpan="2">
@@ -169,11 +172,16 @@
 
         <!--Return Button-->
         <Button
+            Style="{StaticResource RoundButtonTemplate}"
+            FontSize="36"
             Content="Return"
             x:Name="BackBtn"
             HorizontalAlignment="Center"
-            Height="40"
-            Width="100"
+            VerticalAlignment="Center"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeaveEvent"
+            Height="70"
+            Width="200"
             Click="BackBtn_Click"
             Grid.Row="10"
             Grid.Column="0"
@@ -182,11 +190,16 @@
 
         <!--Next Button-->
         <Button
+            Style="{StaticResource RoundButtonTemplate}"
+            FontSize="36"
             Content="Next"
             x:Name="ProceedBtn"
             HorizontalAlignment="Center"
-            Height="40"
-            Width="100"
+            VerticalAlignment="Center"
+            MouseEnter="MyMouseEnterEvent"
+            MouseLeave="MyMouseLeaveEvent"
+            Height="70"
+            Width="200"
             Click="ProceedBtn_Click"
             Grid.Row="10"
             Grid.Column="8"
